i18n/fr/docusaurus-plugin-content-docs/version-9.3a/Video-summaries/01-Introduction/0.5.Enhanced-resources/0.3a.md
---
title: Télécharger les ressources (0.3a)
---
Paratext vous permet de consulter de nombreuses ressources bibliques pour vous aider dans votre travail de traduction, y compris des ressources enrichies.  
*Les deux types de ressources peuvent être téléchargés dans Paratext à partir de la Bibliothèque biblique numérique, ou BBN (DBL).*

### Pour télécharger une ressource

-   Allez dans le menu principal de Paratext.
-   Sélectionnez "Télécharger/Installer des ressources".
-   Si nécessaire, cliquez sur **Afficher les ressources seulement dans les langues qui correspondent…** pour raccourcir la liste.

### Filtrer les ressources

-   Filtrez la liste en saisissant dans la case de **filtrage** les ressources que vous souhaitez.
-   Cliquez sur la case à cocher pour sélectionner une ressource.
-   Cliquez sur le bouton **Télécharger/Installer** pour lancer le processus d'installation.  
   -  *Une fois le téléchargement terminé, Paratext ouvre automatiquement l'une des ressources.*

Les ressources sont maintenant disponibles dans la boîte de dialogue **Ouvrir**.

### Télécharger des ressources enrichies

-   ouvrez le **menu** principal de Paratext.
-   Sélectionnez **Télécharger/Installer des ressources**.
-   Dans la boîte de filtre, commencez à taper **enhanced**.  
   -  *Les ressources enrichies ont toujours un signe plus + après le nom court ainsi qu'une ressource enrichie dans le nom complet.*

### Installez les images (une seule fois)

Si vous voulez voir les cartes et d'autres informations, vous devez télécharger le plus grand de ces trois fichiers **image** que votre connexion internet permet.

-   Cliquez sur le bouton **Télécharger/Installer** pour lancer le processus d'installation.  
   -  *Ce processus peut prendre beaucoup de temps si vous téléchargez les fichiers images.*

### Ouvrir les ressources

-   Cliquez sur le bouton **Ouvrir** de la barre d'outils.
-   Pour voir les ressources enrichies, cliquez sur **Ressources enrichies**.
-   Sélectionnez une ou plusieurs ressources
-   Sélectionnez de la liste **Ouvrir en tant que** 
-   Cliquez sur **OK**.
