i18n/fr/docusaurus-plugin-content-docs/version-9.3/Video-summaries/01-Introduction/0.5.Enhanced-resources/0.3a.md
---
title: Télécharger les ressources (0.3a)
---
Paratext vous permet de consulter de nombreuses ressources bibliques pour vous aider dans votre travail de traduction, y compris des ressources enrichies.  
*Les deux types de ressources peuvent être téléchargés dans Paratext à partir de la Bibliothèque biblique numérique, ou BBN (DBL).*

### Pour télécharger une ressource

1.  Allez dans le menu principal de Paratext.
1.  Sélectionnez "Télécharger/Installer des ressources".
1.  Si nécessaire, cliquez sur **Afficher les ressources seulement dans les langues qui correspondent…** pour raccourcir la liste.

### Filtrer les ressources

1.  Filtrez la liste en saisissant dans la case de **filtrage** les ressources que vous souhaitez.
1.  Cliquez sur la case à cocher pour sélectionner une ressource.
1.  Cliquez sur le bouton **Télécharger/Installer** pour lancer le processus d'installation.  
     -  *Une fois le téléchargement terminé, Paratext ouvre automatiquement l'une des ressources.*

Les ressources sont maintenant disponibles dans la boîte de dialogue **Ouvrir**.

### Télécharger des ressources enrichies

1.  ouvrez le **menu** principal de Paratext.
1.  Sélectionnez **Télécharger/Installer des ressources**.
1.  Dans la boîte de filtre, commencez à taper **enhanced**.  
     -  *Les ressources enrichies ont toujours un signe plus + après le nom court ainsi qu'une ressource enrichie dans le nom complet.*

### Installez les images (une seule fois)

Si vous voulez voir les cartes et d'autres informations, vous devez télécharger le plus grand de ces trois fichiers **image** que votre connexion internet permet.

1.  Cliquez sur le bouton **Télécharger/Installer** pour lancer le processus d'installation.  
     -  *Ce processus peut prendre beaucoup de temps si vous téléchargez les fichiers images.*

 


 :page_facing_up:

### Ouvrir les ressources

1.  Cliquez sur le bouton **Ouvrir** de la barre d'outils.
1.  Pour voir les ressources enrichies, cliquez sur **Ressources enrichies**.
1.  Sélectionnez une ou plusieurs ressources
1.  Sélectionnez de la liste **Ouvrir en tant que** 
1.  Cliquez sur **OK**.

:::tip
Il est possible de partager les ressources téléchargés. Ainsi, si vous vous trouvez dans une zone où l'Internet est lent, vérifiez auprès de votre département informatique ou LangTech s'ils ont déjà téléchargé les fichiers. 
:::
